added more work... It's getting closer to where I want it :))))

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Joahg</title>
+  <title>JoahG.com</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -12,7 +12,7 @@
 			<nav>
 				<h3 id="logo"> Joah Gerstenberg </h3>
 				<ul>
-					<li>
+					<li class="active">
 						<%= link_to "home", root_path %>
 					</li>
 					<li>
