Oops... didn't mean to leave this stuff in there...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
 						<%= link_to "find", find_path %>
 					</li>
 					<li>
-						<a href="mailto:me@joahg.com">email</a>
+						<a href="mailto:me@joahg.com" class="email">email</a>
 					</li>
 				</ul>
 			</nav>
