--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,3 +16,36 @@
 li.active a {
 	color: #000 !important;
 }
+
+#about p {
+	margin-left: 30px;
+	margin-bottom: 0;
+}
+
+#about::before {
+	content: "{";
+}
+
+#about::after {
+	content: "}";
+}
+
+.logo .img {
+	background-size: contain;
+	background-repeat: no-repeat;
+	width: 200px;
+	height: 150px;
+	background-position: center;
+	margin-left: 10px;
+}
+
+.logo:hover {
+	background-color: #eee;
+}
+
+.logo {
+	-moz-transition: background-color 0.3s;
+    -webkit-transition: background-color 0.3s;
+    -o-transition: background-color 0.3s;
+    transition: background-color 0.3s;
+}
