--- a/app/views/p/about.html.erb
+++ b/app/views/p/about.html.erb
@@ -1,6 +1,12 @@
 <header>
 	<h1>About Me</h1>
 </header>
-<div>
-	this is content
+<div id="about">
+	<p>"age": 16, </p>
+	<p>"works_at": "<a href="http://popcorn-web-development.github.com">Popcorn Web Development</a>", </p>
+	<p>"birthday": "November 28, 1996", </p>
+	<p>"type": "Web Developer", </p>
+	<p>"associated_religion": "Christianity", </p>
+	<p>"other_interests": ["Piano", "Guitar", "Running"]</p>
+	<p>"read_more": "<a href="http://about.me/joahg">about.me</a>"</p>
 </div>
