--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -1,6 +1,48 @@
 <header>
 	<h1>Find Me On The Web</h1>
 </header>
-<div>
-	this is content
+<div id="find">
+	<ul>
+		<li><a href="http://about.me/joahg" target="_blank" data-img="http://o.aolcdn.com/aboutme/production179/images/assets/aboutme_376x66_gray.png">about.me</a></li>
+
+		<li><a href="http://git.joahg.com" target="_blank" data-img="http://upload.wikimedia.org/wikipedia/en/f/fc/Bitbucket_Logo.png">bitbucket</a></li>
+
+		<li><a href="http://github.com/joahg" target="_blank" data-img="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/GitHub-Logo.png">github</a></li>
+
+		<li><a href="http://www.behance.net/joahg" target="_blank" data-img="/assets/behance.png">behance</a></li>
+
+		<li><a href="https://bitly.com/u/joahg" target="_blank" data-img="http://static.bitly.com/graphics/logo/bitly_logo.png">bitly</a></li>
+
+		<li><a href="http://codecademy.com/users/joahg" target="_blank" data-img="/assets/codecademy.png">codecademy</a></li>
+
+		<li><a href="http://jsfiddle.net/user/JoahG/fiddles/" target="_blank" data-img="/assets/jsfiddle.png">jsfiddle</a></li>
+
+		<li><a href="https://plus.google.com/u/0/103488776856023593576" target="_blank" data-img="/assets/gplus.png">googleplus</a></li>
+
+		<li><a href="http://khanacademy.com/profile/joahg" target="_blank" data-img="/assets/khanacademy.png">khanacademy</a></li>
+
+		<li><a href="http://coderwall.com/joahg" target="_blank" data-img="/assets/coderwall.png">coderwall</a></li>
+
+		<li><a href="http://www.codeschool.com/users/joahg" target="_blank" data-img="http://d1tijy5l7mg5kk.cloudfront.net/assets/press_kit/logo-full-text-tagless-cfb0014445e8d18bccb22139666ed63b.png">codeschool</a></li>
+
+		<li><a href="https://trustcloud.com/!/joahg" target="_blank" data-img="/assets/trustcloud.png">trustcloud</a></li>
+
+		<li><a href="http://duolingo.com/#/joahg" target="_blank" data-img="/assets/duolingo.png">duolingo</a></li>
+
+        <li><a href="http://www.flickr.com/photos/joahd/" target="_blank" data-img="/assets/flickr.png">flickr</a></li>
+
+		<li><a href="http://smarterer.com/joahg" target="_blank" data-img="/assets/smarterer.png">smarterer</a></li>
+
+		<li><a href="http://www.grovo.com/home/profile/56661" target="_blank" data-img="/assets/grovo.png">grovo</a></li>
+
+		<li><a href="http://www.kickstarter.com/profile/joahg" target="_blank" data-img="http://www.kickstarter.com/download/kickstarter-logo-light.png">kickstarter</a></li>
+
+	</ul>
 </div>
+
+
+
+
+<script>
+	$(document).ready(gridize());
+</script>
