--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -37,6 +37,7 @@
 
 		<li><a href="http://www.kickstarter.com/profile/joahg" target="_blank" data-img="http://www.kickstarter.com/download/kickstarter-logo-light.png">kickstarter</a></li>
 
+		<li><a href="https://www.coursera.org/user/i/6220b377f6e6a18d6d50d1b410305b2c" target="_blank" data-img="/assets/coursera.png">coursera</a></li>
 	</ul>
 </div>
 
