--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -1,6 +1,12 @@
 <header>
-	<h1>This is a page title</h1>
+	<h1>Hi.</h1>
 </header>
 <div>
-	this is content
+	Hi, my name is Joah Gerstenberg. I am a 16 year-old self-taught web-developer based out of the Southeast Texas (USA) area. 
+	<br>
+	<br>
+	One of my primary hobbies is learning. I use several free online learning resources to teach myself what I want to learn. These include (but are not limited to :)): <a href="http://codecademy.com">Codecademy</a>, <a href="http://khanacademy.com/">Khanacademy</a>, <a href="http://duolingo.com">Duolingo</a>, <a href="http://coursera.com">Coursera</a>, and many, many others. (See all of my respective profiles on the <a href="/find" data-nav-trigger="find">Find</a> page.)
+	<br>
+	<br>
+	If you are interested in contacting me, I am available through <a href="mailto:me@joahg.com">email</a> or through <a href="https://plus.google.com/u/0/103488776856023593576">Google+</a>, I'd love to chat :)
 </div>
