--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -9,4 +9,7 @@
 	<br>
 	<br>
 	If you are interested in contacting me, I am available through <a href="mailto:me@joahg.com">email</a> or through <a href="https://plus.google.com/u/0/103488776856023593576">Google+</a>, I'd love to chat :)
+	<br>
+	<br>
+	This website is built on <a href="http://getskeleton.com">Skeleton</a>.
 </div>
