added last line to front page

--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -11,5 +11,5 @@
 	If you are interested in contacting me, I am available through <a href="mailto:me@joahg.com">email</a> or through <a href="https://plus.google.com/u/0/103488776856023593576">Google+</a>, I'd love to chat :)
 	<br>
 	<br>
-	This website is built on <a href="http://getskeleton.com">Skeleton</a>.
+	This website is built on <a href="http://getskeleton.com">Skeleton</a>. Its sourcecode is available upon request.
 </div>
