--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -73,13 +73,13 @@ li.active a {
 	margin-bottom: 2px;
 }
 
-@media only screen and (min-width:767px) {
+@media all and (min-width:767px) {
 	nav ul {
 		display:block;
 	}
 }
 
-@media only screen and (max-width: 767px) {
+@media all and (max-width: 767px) {
 	.mobile-nav-trigger {
 		display: inline-block;
 		cursor: pointer;
@@ -119,13 +119,13 @@ li.active a {
 	}
 }
 
-@media only screen and (max-width:480px) {
+@media all and (max-width:480px) {
 	#logo {
 		width: 250px;
 	}
 }
 
-@media only screen and (max-width:960px) and (min-width: 768px) {
+@media all and (max-width:960px) and (min-width: 768px) {
 	.logo .img {
 		width: 150px;
 		height: 100px;
