--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
@@ -46,7 +47,7 @@
 					</li>
 				</ul>
 			</nav>
-			&nbsp;
+			<span class="nav-clearfix">&nbsp;</span>
 		</div>
 		<div class="twelve columns offset-by-one content">
 			<%= yield %>
