--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -5,11 +5,11 @@
 	Hi, my name is Joah Gerstenberg. I am a 16 year-old self-taught web-developer based out of the Southeast Texas (USA) area. 
 	<br>
 	<br>
-	One of my primary hobbies is learning. I use several free online learning resources to teach myself what I want to learn. These include (but are not limited to :)): <a href="http://codecademy.com">Codecademy</a>, <a href="http://khanacademy.com/">Khanacademy</a>, <a href="http://duolingo.com">Duolingo</a>, <a href="http://coursera.com">Coursera</a>, and many, many others. (See all of my respective profiles on the <a href="/find" data-nav-trigger="find">Find</a> page.)
+	One of my primary hobbies is learning. I use several free online learning resources to teach myself what I want to learn. These include (but are not limited to :)): <a href="http://codecademy.com" target="_blank">Codecademy</a>, <a href="http://khanacademy.com/" target="_blank">Khanacademy</a>, <a href="http://duolingo.com" target="_blank">Duolingo</a>, <a href="http://coursera.com" target="_blank">Coursera</a>, and many, many others. (See all of my respective profiles on the <a href="/find" data-nav-trigger="find">Find</a> page.)
 	<br>
 	<br>
-	If you are interested in contacting me, I am available through <a href="mailto:me@joahg.com">email</a> or through <a href="https://plus.google.com/u/0/103488776856023593576">Google+</a>, I'd love to chat :)
+	If you are interested in contacting me, I am available through <a href="mailto:me@joahg.com">email</a> or through <a href="https://plus.google.com/u/0/103488776856023593576" target="_blank">Google+</a>, I'd love to chat :)
 	<br>
 	<br>
-	This website is built on <a href="http://getskeleton.com">Skeleton</a>. Its sourcecode is available upon request.
+	This website is built on <a href="http://getskeleton.com" target="_blank">Skeleton</a>. Its sourcecode is available upon request.
 </div>
