--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,7 +1,10 @@
 <% if current_user && current_user.admin? %>
 	<header>
-		<h1>New Post</h1>
+		<h1>
+			Edit Post
+		</h1>
 	</header>
+
 	<div>
 		<%= render "form" %>
 	</div>
