--- a/app/views/posts/tag.html.erb
+++ b/app/views/posts/tag.html.erb
@@ -3,7 +3,7 @@
 </header>
 
 <div>
-	<% if @posts %>
+	<% if @posts.length > 0 %>
 		<%= render "previews", :posts => @posts %>
 	<% else %>
 		Sorry! I haven't written a post yet about "<%= params[:tag] %>", why don't you <a href="mailto:me@joahg.com">email me</a> an idea that I can write about!
