--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
   <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
   <meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/ico" href="assets/favicon.png" />
+  <link rel="icon" type="image/ico" href="assets/favicon2.png" />
 </head>
 <body>
 	<div class="container">
