Added fix for browsers without the font 'monaco' (which I really should have done at the beginning, but oh well :P

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -94,11 +94,11 @@ li.active a {
 
 pre {
 	margin-bottom: 20px;
-	font-family: "monaco";
+	font-family: "monaco", monospace;
 }
 
 code {
-	font-family: "monaco";
+	font-family: "monaco", monospace;
 }
 
 input, textarea {
