--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -13,7 +13,12 @@
 
 		<li><a href="http://codecademy.com/users/joahg" target="_blank" data-img="/assets/codecademy.png">codecademy</a></li>
 
+		<li><a href="http://codepen.io/JoahG" target="_blank" data-img="http://blog.codepen.io/wp-content/uploads/2012/06/Black-Large.png">codepen</a></li>
+		codepen
+
 		<li><a href="http://coderwall.com/joahg" target="_blank" data-img="/assets/coderwall.png">coderwall</a></li>
+
+		<li><a href="https://coderbits.com/JoahG" target="_blank" data-img="/assets/coderbits.png">coderbits</a></li>
 
 		<li><a href="http://www.codeschool.com/users/joahg" target="_blank" data-img="http://d1tijy5l7mg5kk.cloudfront.net/assets/press_kit/logo-full-text-tagless-cfb0014445e8d18bccb22139666ed63b.png">codeschool</a></li>
 
