--- a/app/views/urls/info.html.erb
+++ b/app/views/urls/info.html.erb
@@ -1,4 +1,4 @@
-Info on <%= @url.short %><br>
+<h1>Info on <%= @url.short %></h1>
 Created at: <%= @url.created_at %><br>
 Directs to: <%= @url.long %><br>
 Has received <%= pluralize(@url.clicks, "click") %>
