--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -1,3 +1,5 @@
+<h1>URL Shortener</h1>
+
 <ul>
 	<% @urls.each do |url| %>
 		<li><%= link_to url.short, show_url_path(url.short) %> ~ <%= pluralize(url.clicks, "click") %> - <a class="copy-button" data-clipboard-text="<%=root_url+url.short%>">Copy to clipboard</a> | <%= link_to "info >>", info_url_path(url.short) %></li>
