Added functionality for admins to delete urls...

--- a/app/views/urls/info.html.erb
+++ b/app/views/urls/info.html.erb
@@ -2,3 +2,6 @@
 Created at: <%= @url.created_at %><br>
 Directs to: <%= @url.long %><br>
 Has received <%= pluralize(@url.clicks, "click") %>
+<% if current_user && current_user.admin? %>
+	<br><%= link_to 'Delete', @url, method: :delete, data: { confirm: 'Are you sure?' } %>
+<% end %>
