--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,9 @@
 					<li>
 						<a href="mailto:me@joahg.com" class="email">email</a>
 					</li>
+					<% if current_user %>
+						<li>bob </li>
+					<% end %>
 				</ul>
 			</nav>
 			<span class="nav-clearfix">&nbsp;</span>
