--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,6 +109,10 @@ input, textarea {
 	padding-bottom: 60px;
 }
 
+.center {
+	text-align: center;
+}
+
 @media all and (min-width:767px) {
 	nav ul {
 		display:block;
