--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -2,7 +2,7 @@
 	<h1>Hi.</h1>
 </header>
 <div>
-	Hi, my name is Joah Gerstenberg. I am a 16 year-old self-taught web-developer based out of the Southeast Texas (USA) area. 
+	Hi, my name is Joah Gerstenberg. I am a self-taught student web-developer based out of the Southeast Texas (USA) area. 
 	<br>
 	<br>
 	One of my primary hobbies is learning. I use several free online learning resources to teach myself what I want to learn. These include (but are not limited to :)): <a href="http://codecademy.com" target="_blank">Codecademy</a>, <a href="http://khanacademy.com/" target="_blank">Khanacademy</a>, <a href="http://duolingo.com" target="_blank">Duolingo</a>, <a href="http://coursera.com" target="_blank">Coursera</a>, and many, many others. (See all of my respective profiles on the <a href="/find" data-nav-trigger="find">Find</a> page.)
