--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -33,6 +33,8 @@
 
 		<li><a href="http://www.grovo.com/home/profile/56661" target="_blank" data-img="/assets/grovo.png">grovo</a></li>
 
+		<li><a href="https://www.hackerrank.com/JoahG" target="_blank" data-img="/assets/hackerrank.png">hackerrank</a></li>
+
 		<li><a href="http://jsfiddle.net/user/JoahG/fiddles/" target="_blank" data-img="/assets/jsfiddle.png">jsfiddle</a></li>
 
 		<li><a href="http://khanacademy.com/profile/joahg" target="_blank" data-img="/assets/khanacademy.png">khanacademy</a></li>
