Added new Google+ URL

--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -29,7 +29,7 @@
 
 		<li><a href="http://github.com/joahg" target="_blank" data-img="https://a248.e.akamai.net/assets.github.com/images/modules/logos_page/GitHub-Logo.png">github</a></li>
 
-		<li><a href="https://plus.google.com/u/0/103488776856023593576" target="_blank" data-img="/assets/gplus.png">googleplus</a></li>
+		<li><a href="/+" target="_blank" data-img="/assets/gplus.png">googleplus</a></li>
 
 		<li><a href="http://www.grovo.com/home/profile/56661" target="_blank" data-img="/assets/grovo.png">grovo</a></li>
 
