Added Ultimate Guitar

--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -44,6 +44,8 @@
 		<li><a href="http://smarterer.com/joahg" data-img="/assets/smarterer.png">smarterer</a></li>
 
 		<li><a href="https://trustcloud.com/!/joahg" data-img="/assets/trustcloud.png">trustcloud</a></li>
+
+		<li><a href="http://profile.ultimate-guitar.com/JoahG/" data-img="http://cdn.ustatik.com/_img/ug_logo/ug_logo.png">ultimate-guitar</a></li>
 	</ul>
 </div>
 
