Added back blog link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,9 @@
 					<%end%>
 						<%= link_to "find", root_url(subdomain: false)+"find", :class => "nav_find" %>
 					</li>
+					<li>
+						<a href="http://blog.joahg.com">blog</a>
+					</li>
 					<% if current_page?(portfolio_path) %>
 						<li class="active">
 					<%else%>
