--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -9,15 +9,15 @@
 
 		<li><a href="http://gbergfamily.com" data-img="/assets/gbergfamily.png" data-about="Website made for my family. Built on Skeleton.">GbergFamily</a></li>
 
-		<li><a href="http://lifecarefamily.com" data-img="/assets/lifecarefamily.png" data-about="Website made for Lifecare Family Medicine. (Temporary)">Lifecare Family</a></li>
+		<li><a href="http://lifecarefamily.com" data-img="/assets/lifecarefamily.png" data-about="Website made for Lifecare Family Medicine.">Lifecare Family</a></li>
 
 		<li><a href="http://blog.joahg.com" data-img="/assets/myblog.png" data-about="My personal blog. Built on Skeleton.">Blog</a></li>
 
-		<li><a href="http://beta.ridgewoodchurch.us" data-img="/assets/ridgewood.png" data-about="Charity website made for Ridgewood Church. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>. (Under Construction)">Ridgewood Church</a></li>
+		<li><a href="http://ridgewoodchurch.us" data-img="/assets/ridgewood.png" data-about="Charity website made for Ridgewood Church. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Ridgewood Church</a></li>
 
 		<li><a href="http://sarah.gbergfamily.com" data-img="/assets/sarahs_desk.png" data-about="Blog built for my sister.">Blog</a></li>
 
-		<li><a href="http://terryfortexas.nationbuilder.com" data-img="/assets/terryholcomb.png" data-about="Website made for Terry Holcomb campaign for Texas State Representative 18. (Under Construction)">Terry Holcomb</a></li>
+		<li><a href="http://terryholcomb.com" data-img="/assets/terryholcomb.png" data-about="Website made for Terry Holcomb campaign for Texas State Representative 18.">Terry Holcomb</a></li>
 
 		<li><a href="http://go.joahg.com" data-img="/assets/urlshortener.png" data-about="Personal project. Built on Skeleton.">URL Shortener</a></li>
 	</ul>
