Another little edit...

--- a/app/views/p/about.html.erb
+++ b/app/views/p/about.html.erb
@@ -3,8 +3,8 @@
 </header>
 <div id="about">
 	<p>"age": 16, </p>
-	<p>"works_at": "<a href="http://popcorn-web-development.github.com">Popcorn Web Development</a>", </p>
 	<p>"profession": "Web Developer", </p>
+	<p>"works_as": "<a href="http://www.popcornwebdev.com">Popcorn Web Development</a>", </p>
 	<p>"associated_religion": "Christianity", </p>
 	<p>"other_interests": ["Piano", "Guitar", "Running"]</p>
 	<p>"read_more": "<a href="http://about.me/joahg">about.me</a>"</p>
