Fixed bitbucket link

--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -7,7 +7,7 @@
 
 		<li><a href="http://www.behance.net/joahg" data-img="/assets/behance.png">behance</a></li>
 
-		<li><a href="http://git.joahg.com" data-img="http://upload.wikimedia.org/wikipedia/en/f/fc/Bitbucket_Logo.png">bitbucket</a></li>
+		<li><a href="http://bitbucket.org/joahg" data-img="http://upload.wikimedia.org/wikipedia/en/f/fc/Bitbucket_Logo.png">bitbucket</a></li>
 
 		<li><a href="https://bitly.com/u/joahg" data-img="http://static.bitly.com/graphics/logo/bitly_logo.png">bitly</a></li>
 
