Changed Beaver Words link to ghpages

--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -3,7 +3,7 @@
 </header>
 <div id="gridize" class="two">
 	<ul>
-		<li><a href="https://github.com/Popcorn-Web-Development/Beaver-Words" data-img="/assets/beaverwords.jpg" data-about="Game Off 2012 project. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Beaver Words</a></li>
+		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/beaverwords.jpg" data-about="Game Off 2012 project. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Beaver Words</a></li>
 
 		<li><a href="http://beta.engagesetx.com" data-img="/assets/engagesetx.png" data-about="Website made for ENGAGE SETX homeschool political group. (Under Construction)">ENGAGE SETX</a></li>
 
