Added git.joahg.com projects

--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -5,15 +5,19 @@
 	<ul>
 		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/beaverwords.jpg" data-about="Game Off 2012 project. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Beaver Words</a></li>
 
+		<li><a href="http://sarah.gbergfamily.com" data-img="/assets/sarahs_desk.png" data-about="Blog built for my sister.">Blog</a></li>
+
+		<li><a href="http://git.joahg.com/HTML-Calculator/" data-img="/assets/calculator.jpg" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com'>Codecademy</a> project.">Calculator</a></li>
+
 		<li><a href="http://beta.engagesetx.com" data-img="/assets/engagesetx.png" data-about="Website made for ENGAGE SETX homeschool political group. (Under Construction)">ENGAGE SETX</a></li>
 
 		<li><a href="http://gbergfamily.com" data-img="/assets/gbergfamily.png" data-about="Website made for my family. Built on Skeleton.">GbergFamily</a></li>
 
 		<li><a href="http://lifecarefamily.com" data-img="/assets/lifecarefamily.png" data-about="Website made for Lifecare Family Medicine.">Lifecare Family</a></li>
 
-		<li><a href="http://ridgewoodchurch.us" data-img="/assets/ridgewood.png" data-about="Charity website made for Ridgewood Church. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Ridgewood Church</a></li>
+		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/mastermind.jpg" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com'>Codecademy</a> project.">Mastermind</a></li>
 
-		<li><a href="http://sarah.gbergfamily.com" data-img="/assets/sarahs_desk.png" data-about="Blog built for my sister.">Blog</a></li>
+		<li><a href="http://ridgewoodchurch.us" data-img="/assets/ridgewood.png" data-about="Charity website made for Ridgewood Church. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Ridgewood Church</a></li>
 
 		<li><a href="http://terryholcomb.com" data-img="/assets/terryholcomb.png" data-about="Website made for Terry Holcomb campaign for Texas State Representative 18.">Terry Holcomb</a></li>
 
