--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -7,7 +7,7 @@
 
 		<li><a href="http://sarah.gbergfamily.com" data-img="/assets/sarahs_desk.png" data-about="Blog built for my sister.">Blog</a></li>
 
-		<li><a href="http://git.joahg.com/HTML-Calculator/" data-img="/assets/calculator.png" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com'>Codecademy</a> project.">Calculator</a></li>
+		<li><a href="http://git.joahg.com/HTML-Calculator/" data-img="/assets/calculator.png" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com' target='_blank'>Codecademy</a> project.">Calculator</a></li>
 
 		<li><a href="http://beta.engagesetx.com" data-img="/assets/engagesetx.png" data-about="Website made for ENGAGE SETX homeschool political group. (Under Construction)">ENGAGE SETX</a></li>
 
@@ -15,7 +15,9 @@
 
 		<li><a href="http://lifecarefamily.com" data-img="/assets/lifecarefamily.png" data-about="Website made for Lifecare Family Medicine.">Lifecare Family</a></li>
 
-		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/mastermind.png" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com'>Codecademy</a> project.">Mastermind</a></li>
+		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/mastermind.png" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com' target='_blank'>Codecademy</a> project.">Mastermind</a></li>
+
+		<li><a href="http://popcornwebdev.com" data-img="/assets/popcornwebdev.png" data-about="Website I built for <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a> and my Web Development business.">Popcorn Web Development</a></li>
 
 		<li><a href="http://ridgewoodchurch.us" data-img="/assets/ridgewood.png" data-about="Charity website made for Ridgewood Church. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Ridgewood Church</a></li>
 
