Added message about opensource goodness

--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -11,5 +11,5 @@
 	I would love to work with you to get your business online through a website. If you are interested in contacting me, or inquiring about a job, I am available through <a href="mailto:me@joahg.com">email</a> or through <a href="http://joahg.com/+" target="_blank">Google+</a>, I'd love to chat :)
 	<br>
 	<br>
-	This website is built on <a href="http://getskeleton.com" target="_blank">Skeleton</a>. Its sourcecode is available upon request.
+	This website is built on <a href="http://getskeleton.com" target="_blank">Skeleton</a>. Its sourcecode is available <a href="https://github.com/JoahG/joahg.com" target="_blank">on GitHub</a>.
 </div>
