Added loading gif

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <link rel="icon" type="image/ico" href="assets/favicon2.png" />
 </head>
 <body>
+	<div class="preload">
+		<img class='loading' height='10' src='/assets/loading.gif' />
+	</div>
 	<div class="container">
 		<div class="three columns sidebar">
 			<nav>
