--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,26 +20,26 @@
 				<h3 id="logo"> Joah Gerstenberg </h3>
 				<button class="mobile-nav-trigger"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
 				<ul>
-					<% if current_page?(root_url(subdomain: false)) && !current_page?(root_url(subdomain: "blog")) %>
+					<% if current_page?(root_url) %>
 						<li class="active">
 					<%else%>
 						<li>
 					<%end%>
-						<%= link_to "home", root_url(subdomain: false), :class => "nav_home" %>
+						<%= link_to "home", root_url, :class => "nav_home" %>
 					</li>
 					<% if current_page?(about_path) %>
 						<li class="active">
 					<%else%>
 						<li>
 					<%end%>
-						<%= link_to "about", root_url(subdomain: false)+"about", :class => "nav_about" %>
+						<%= link_to "about", about_path, :class => "nav_about" %>
 					</li>
 					<% if current_page?(find_path) %>
 						<li class="active">
 					<%else%>
 						<li>
 					<%end%>
-						<%= link_to "find", root_url(subdomain: false)+"find", :class => "nav_find" %>
+						<%= link_to "find", find_path, :class => "nav_find" %>
 					</li>
 					<li>
 						<a href="http://blog.joahg.com">blog</a>
@@ -49,7 +49,7 @@
 					<%else%>
 						<li>
 					<%end%>
-						<%= link_to "portfolio", root_url(subdomain: false)+"portfolio", :class => "nav_portfolio" %>
+						<%= link_to "portfolio", portfolio_path, :class => "nav_portfolio" %>
 					</li>
 					<li>
 						<a href="mailto:me@joahg.com" class="email">email</a>
