--- a/app/views/p/about.html.erb
+++ b/app/views/p/about.html.erb
@@ -5,7 +5,7 @@
 	<p>"age": 16, </p>
 	<p>"profession": "Web Developer", </p>
 	<p>"works_as": "<a href="http://www.popcornwebdev.com">Popcorn Web Development</a>", </p>
-	<p>"associated_religion": "Christianity", </p>
+	<p>"associated_religion": "<a href="https://www.truelife.org/">Christianity</a>", </p>
 	<p>"other_interests": ["Piano", "Guitar", "Running"]</p>
 	<p>"read_more": "<a href="http://about.me/joahg">about.me</a>"</p>
 </div>
