--- a/app/views/p/find.html.erb
+++ b/app/views/p/find.html.erb
@@ -41,7 +41,7 @@
 
 		<li><a href="http://www.kickstarter.com/profile/joahg" data-img="http://www.kickstarter.com/download/kickstarter-logo-light.png">kickstarter</a></li>
 
-		<li><a href="http://www.linkedin.com/pub/joah-gerstenberg/86/b73/2a4" data-img="">linkedin</a></li>
+		<li><a href="http://www.linkedin.com/pub/joah-gerstenberg/86/b73/2a4" data-img="https://dlc1-s.licdn.com/sites/default/files/Logo-59px-R.png">linkedin</a></li>
 
 		<li><a href="http://smarterer.com/joahg" data-img="/assets/smarterer.png">smarterer</a></li>
 
