--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -13,6 +13,8 @@
 
 		<li><a href="http://gbergfamily.com" data-img="/assets/gbergfamily.png" data-about="Website made for my family. Built on Skeleton.">GbergFamily</a></li>
 
+		<li><a href="http://jsrepl.git.joahg.com/" data-img="/assets/jsrepl.png" data-about="Personal project. A JavaScript <a href='http://en.wikipedia.org/wiki/Read%E2%80%93eval%E2%80%93print_loop'>REPL</a> built on Ruby on Rails.">JSREPL</a></li>
+
 		<li><a href="http://lifecarefamily.com" data-img="/assets/lifecarefamily.png" data-about="Website made for Lifecare Family Medicine.">Lifecare Family</a></li>
 
 		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/mastermind.png" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com' target='_blank'>Codecademy</a> project.">Mastermind</a></li>
