Added browser detection popup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>JoahG.com</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
+	<title>JoahG.com</title>
+	<%= stylesheet_link_tag    "application", :media => "all" %>
+	<%= javascript_include_tag "application" %>
+	<%= csrf_meta_tags %>
 
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-  <meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/ico" href="assets/favicon2.png" />
+	<link rel="stylesheet" type="text/css" media="screen" href="browser-detection.css" />
+	<script type="text/javascript" src="browser-detection.js"></script>
+
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+	<meta name="viewport" content="width=device-width">
+	<link rel="icon" type="image/ico" href="assets/favicon2.png" />
 </head>
 <body>
 	<div class="preload">
