--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,8 @@
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tags %>
 
-	<link rel="stylesheet" type="text/css" media="screen" href="browser-detection.css" />
-	<script type="text/javascript" src="browser-detection.js"></script>
+	<link rel="stylesheet" type="text/css" media="screen" href="http://www.devslide.com/public/labs/browser-detection/browser-detection.css" />
+	<script type="text/javascript" src="http://www.devslide.com/public/labs/browser-detection/browser-detection.js"></script>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
 	<meta name="viewport" content="width=device-width">
