Removed smiley face in an attempt to increase professionalism ;D

--- a/app/views/p/index.html.erb
+++ b/app/views/p/index.html.erb
@@ -5,7 +5,7 @@
 	Hi, my name is Joah Gerstenberg. I am a self-taught student web-developer based out of the Southeast Texas (USA) area. 
 	<br>
 	<br>
-	One of my primary hobbies is learning. I use several free online learning resources to teach myself what I want to learn. These include (but are not limited to :)): <a href="http://codecademy.com" target="_blank">Codecademy</a>, <a href="http://khanacademy.com/" target="_blank">Khanacademy</a>, <a href="http://duolingo.com" target="_blank">Duolingo</a>, <a href="http://coursera.com" target="_blank">Coursera</a>, and many, many others. (See all of my respective profiles on the <a href="/find" data-nav-trigger="find">Find</a> page.)
+	One of my primary hobbies is learning. I use several free online learning resources to teach myself what I want to learn. These include (but are not limited to): <a href="http://codecademy.com" target="_blank">Codecademy</a>, <a href="http://khanacademy.com/" target="_blank">Khanacademy</a>, <a href="http://duolingo.com" target="_blank">Duolingo</a>, <a href="http://coursera.com" target="_blank">Coursera</a>, and many, many others. (See all of my respective profiles on the <a href="/find" data-nav-trigger="find">Find</a> page.)
 	<br>
 	<br>
 	I would love to work with you to get your business online through a website. If you are interested in contacting me, or inquiring about a job, I am available through <a href="mailto:me@joahg.com">email</a>, <a href="http://joahg.com/+" target="_blank">Google+</a>, or through <a href="http://www.linkedin.com/pub/joah-gerstenberg/86/b73/2a4">LinkedIn</a>, I'd love to chat :)
