--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -3,7 +3,7 @@
 </header>
 <div id="gridize" class="two">
 	<ul>
-		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/beaverwords.jpg" data-about="Game Off 2012 project. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Beaver Words</a></li>
+		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/beaverwords.jpg" data-about="Game Off 2012 project. Built with <a target='_blank' href='http://gracenut.github.io'>Haley Higgins</a>.">Beaver Words</a></li>
 
 		<li><a href="http://sarah.gbergfamily.com" data-img="/assets/sarahs_desk.png" data-about="Blog built for my sister.">Blog</a></li>
 
@@ -21,9 +21,9 @@
 
 		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/mastermind.png" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com' target='_blank'>Codecademy</a> project.">Mastermind</a></li>
 
-		<li><a href="http://popcornwebdev.com" data-img="/assets/popcornwebdev.png" data-about="Website I built for <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a> and my Web Development business.">Popcorn Web Development</a></li>
+		<li><a href="http://popcornwebdev.com" data-img="/assets/popcornwebdev.png" data-about="Website I built for <a target='_blank' href='http://gracenut.github.io'>Haley Higgins</a> and my Web Development business.">Popcorn Web Development</a></li>
 
-		<li><a href="http://ridgewoodchurch.us" data-img="/assets/ridgewood.png" data-about="Charity website made for Ridgewood Church. Built with <a target='_blank' href='http://about.me/gracenut'>Haley Higgins</a>.">Ridgewood Church</a></li>
+		<li><a href="http://ridgewoodchurch.us" data-img="/assets/ridgewood.png" data-about="Charity website made for Ridgewood Church. Built with <a target='_blank' href='http://gracenut.github.io'>Haley Higgins</a>.">Ridgewood Church</a></li>
 
 		<li><a href="http://terryholcomb.com" data-img="/assets/terryholcomb.png" data-about="Website made for Terry Holcomb campaign for Texas State Representative 18.">Terry Holcomb</a></li>
 
