Updated portfolio to include Obfuscatejs

--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -19,7 +19,9 @@
 
 		<li><a href="http://lifecarefamily.com" data-img="/assets/lifecarefamily.png" data-about="Website made for Lifecare Family Medicine.">Lifecare Family</a></li>
 
-		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/mastermind.png" data-about="HTML/CSS/JS Calculator I built for a <a href='http://codecademy.com' target='_blank'>Codecademy</a> project.">Mastermind</a></li>
+		<li><a href="http://git.joahg.com/HTML-Mastermind/" data-img="/assets/mastermind.png" data-about="HTML/CSS/JS Mastermind game I built for a <a href='http://codecademy.com' target='_blank'>Codecademy</a> project.">Mastermind</a></li>
+
+		<li><a href="https://rubygems.org/gems/obfuscatejs" data-img="/assets/obfuscatejs.png" data-about="Ruby gem for simple string obfuscation in Rails views.">Obfuscatejs</a></li>
 
 		<li><a href="http://popcornwebdev.com" data-img="/assets/popcornwebdev.png" data-about="Website I built for <a target='_blank' href='http://gracenut.github.io'>Haley Higgins</a> and my Web Development business.">Popcorn Web Development</a></li>
 
