--- a/app/views/p/portfolio.html.erb
+++ b/app/views/p/portfolio.html.erb
@@ -5,7 +5,7 @@
 	<ul>
 		<li><a href="http://git.joahg.com/Beaver-Words/" data-img="/assets/beaverwords.jpg" data-about="Game Off 2012 project. Built with <a target='_blank' href='http://gracenut.github.io'>Haley Higgins</a>.">Beaver Words</a></li>
 
-		<li><a href="http://git.joahg.com/bibleRef.js/" data-img="/assets/biblerefjs.jpg" data-about="Javascript script to detect Bible references and link to a website where they may be read online.">bibleRef.js</a></li>
+		<li><a href="http://git.joahg.com/bibleRef.js/" data-img="/assets/biblerefjs.png" data-about="Javascript script to detect Bible references and link to a website where they may be read online.">bibleRef.js</a></li>
 
 		<li><a href="http://sarah.gbergfamily.com" data-img="/assets/sarahs_desk.png" data-about="Blog built for my sister.">Blog</a></li>
 
